# frankencert

./: .gitignore  LICENSE  Makefile  README.md  frankencert  go.mod  mypy.ini  pyproject.toml  setup.cfg
frankencert/: frankencert  frankencert.py  query.py  runner.py
loaders/go/: .gitignore  loader.go
utils/: gen-seeds.sh  group-errors.py  load-gnutls.sh  load-mbedtls.sh  load-openssl.sh  miniloader.go  miniloader.py  parse.sh  postprocess.sh  print-certs  tls-server
