[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "frankencert"
version = "0.1.0"
description = "Continuation of the frankencert project with python-cryptography"
authors = ["Stefan Tatschner <stefan.tatschner@aisec.fraunhofer.de>"]
license = "Apache2"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cryptography = "^39.0.1"
gallia = "1.1.4"
pyOpenSSL = "^23.0.0"
python-mbedtls = "^2.6.0"
types-pyOpenSSL = "^23.0.0"
pandas = "^1.5.2"
SQLAlchemy = "^2.0.3"
matplotlib = "^3.6.3"
pandas-stubs = "^1.5.3.230203"

[tool.poetry.scripts]
certrunner = "frankencert.runner:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
isort = "^5.12.0"
mypy = "^0.971"
pylint = "2.14.5"
pylsp-mypy = "^0.6.5"
pyls-isort = "^0.2.2"
pylsp-rope = "^0.1.8"
pytest = "^7.2.1"
pytest-asyncio = "^0.19.0"
python-lsp-black = "^1.1.0"
python-lsp-server = "^1.5.0"
types-aiofiles = "^0.8.10"
myst-parser = "^0.18.0"
reuse = "^1.1.2"

[tool.mypy]
strict = true

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
