[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "frankencert"
version = "0.1.0"
description = "Continuation of the frankencert project with python-cryptography"
authors = ["Stefan Tatschner <stefan.tatschner@aisec.fraunhofer.de>"]
license = "Apache2"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cryptography = "^41.0"
gallia = "^1.1"
pyOpenSSL = "^23.1.1"
matplotlib = "^3.6.0"
polars = "^0.18"
adbc-driver-sqlite = "^0.5"
pyarrow = "^12.0.0"
asn1tools = "^0.166.0"
connectorx = "0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^1.2"
pylsp-mypy = "^0.6.2"
pylsp-rope = "^0.1.8"
python-lsp-black = "^1.1.0"
python-lsp-server = "^1.5.0"
python-mbedtls = "^2.6.1"
types-pyOpenSSL = "^23.1.0"
reuse = "^1.0.0"
ruff = ">=0.0.260,<0.0.276"
python-lsp-ruff = "^1.1.0"

[tool.poetry.scripts]
certrunner = "frankencert.runner:main"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"
select = [
    # TODO: Enable this
    # "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestlye
    "F",    # pyflakes
    "I",    # isort
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
]
